[tool.poetry]
name = "Domain93"
version = "1.0.0"
description = "Fork of Domain92 with a GUI"
authors = ["Polaroid.Camera", "LexLeethor (Pi 5)"]
readme = "README.md"
repository = "https://github.com/LexLeethorMain/domain93"

[project]
name = "domain93"
dynamic = [ "version" ]
license = "GPL-3.0-or-later"

include = [
    { path = "domain93/data", format = ["sdist", "wheel"] }
]


[tool.poetry.dependencies]
python = ">=3.8"
pillow = "^11.1.0"
requests = "^2.32.3"
art = "^6.4"
freedns-client = "^0.1.3"
pytesseract = "^0.3.13"
lolpython = "^2.2.0"
pysocks = "^1.7.1"
stem = "^1.8.2"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
domain93 = "domain93.__main__:init"



# content below this line added by briefcase convert
# This project was generated with 0.3.22 using template: https://github.com/beeware/briefcase-template@v0.3.22
[tool.briefcase]
project_name = "domain93"
bundle = "com.PolaroidPi5.domain93"
version = "1.0.0"
url = "https://github.com/LexLeethorMain/domain93"
license.file = "LICENSE"
author = "LexLeethor/Polaroid.Camera"
author_email = "contact@cbass92.org"

[tool.briefcase.app.domain93]
formal_name = "domain93"
description = "A totally rad cli tool for automating freedns"
long_description = """More details about the app should go here.
"""
sources = [
    "domain93",
]
test_sources = [
    "tests",
]
console_app = false

requires = [
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "art>=6.4",
    "freedns-client>=0.1.3",
    "pytesseract>=0.3.13",
    "lolpython>=2.2.0",
    "pysocks>=1.7.1",
    "stem>=1.8.2",
    "ttkbootstrap>=1.10.1"
]
test_requires = [
    # Add your cross-platform test requirements here
]

[tool.briefcase.app.domain93.macOS]
universal_build = true
requires = [
    # Add your macOS-specific app requirements here
]

[tool.briefcase.app.domain93.linux]
requires = [
    # Add your Linux-specific app requirements here
]

[tool.briefcase.app.domain93.linux.system.debian]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain93.linux.system.rhel]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain93.linux.system.suse]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain93.linux.system.arch]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain93.linux.flatpak]
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = "24.08"
flatpak_sdk = "org.freedesktop.Sdk"

[tool.briefcase.app.domain93.windows]
requires = [
    # Add your Windows-specific app requirements here
]

# Mobile deployments
[tool.briefcase.app.domain93.iOS]
requires = [
    # Add your iOS-specific app requirements here
]

[tool.briefcase.app.domain93.android]
requires = [
    # Add your Android-specific app requirements here
]

# Web deployments
[tool.briefcase.app.domain93.web]
requires = [
    # Add your web-specific app requirements here
]

