[tool.poetry]
name = "Domain93"
version = "1.0.1"
description = "Fork of Domain92 with a GUI"
authors = ["Polaroid.Camera", "LexLeethor (Pi 5)"]
readme = "README.md"
repository = "https://github.com/LexLeethorMain/domain93"


[tool.poetry.dependencies]
python = ">=3.9"
pillow = ">=10.0.0" # Use a modern version of Pillow
requests = "^2.32.3"
art = "^6.4"
freedns-client = "^0.1.3"
pytesseract = "^0.3.13"
lolpython = "^2.2.0"
pysocks = "^1.7.1"
stem = "^1.8.2"
ttkbootstrap = "^1.10.1" # Explicitly require a compatible version

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Point to a proper main function that will be created in the script
domain93 = "domain93.__main__:main"

# --- briefcase settings below are mostly unchanged but will benefit from the dependency fixes ---
[tool.briefcase]
project_name = "domain93"
bundle = "com.cbass92.domain93"
version = "1.2.0"
url = "https://github.com/LexLeethorMain/domain93"
license.file = "LICENSE"
author = "LexLeethor/Polaroid.Camera"
author_email = "contact@cbass92.org"

[tool.briefcase.app.domain93]
formal_name = "domain93"
description = "A totally rad cli tool for automating freedns"
long_description = """More details about the app should go here.
"""
sources = [
    "domain93",
]
requires = [
    'ttkbootstrap>=1.10.1', # Ensure briefcase uses the correct version
    "pillow>=10.0.0",
    "requests>=2.32.3",
    "art>=6.4",
    "freedns-client>=0.1.3",
    "pytesseract>=0.3.13",
    "lolpython>=2.2.0",
    "pysocks>=1.7.1",
    "stem>=1.8.2"
]
